Post Carousel: Prevent Potential Overflow on load

--- a/widgets/post-carousel/styles/default.less
+++ b/widgets/post-carousel/styles/default.less
@@ -65,6 +65,7 @@
 .sow-carousel-wrapper {
 
   .sow-carousel-items {
+    width: auto;
 
     .sow-carousel-item {
       width: @thumbnail_width;
